<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_globe"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_hidden_gem"
        android:icon="@drawable/ic_map_24"
        android:title="@string/title_hidden_gem" />

    <item
        android:id="@+id/navigation_quest_share"
        android:icon="@drawable/ic_people"
        android:title="@string/title_quest_share" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>