<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.indoquest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.indoquest.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_hidden_gem"
        android:name="com.example.indoquest.ui.hiddengem.HiddenGemFragment"
        android:label="@string/title_hidden_gem"
        tools:layout="@layout/fragment_hidden_gem" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.indoquest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile2" />
    <fragment
        android:id="@+id/navigation_quest_share"
        android:name="com.example.indoquest.ui.questshare.QuestShareFragment"
        android:label="@string/title_quest_share"
        tools:layout="@layout/fragment_quest_share" />
</navigation>